# Jabapp

./: .gitignore  ASTNode.cpp  ASTNode.h  CMakeLists.txt  Function.cpp  Function.h  FunctionCallBack.cpp  FunctionCallBack.h  Interpreter.cpp  Interpreter.h  Jaba++.cpp  Lexer.cpp  Lexer.h  README.md  Scope.cpp  Scope.h  Token.h  TokenType.h  Toolkit.cpp  Toolkit.hpp  Variable.cpp  Variable.h  usings.h
include/: ASTNode.h  Function.h  FunctionCallBack.h  Interpreter.h  Lexer.h  Object.h  Parser.h  Scope.h  Token.h  Toolkit.hpp  Variable.h
include/interpret/: Interpreter.h
include/interpret/lexer/: Lexer.h  Token.h  TokenType.h
include/interpret/parser/: ASTNode.h  Scope.h
include/runtime/: Toolkit.hpp  usings.h
include/runtime/object/: Function.h  FunctionCallBack.h  Object.h  Variable.h
src/: Jaba++.cpp
src/interpret/: ASTNode.cpp  Interpreter.cpp  Lexer.cpp  Scope.cpp  Variable.cpp
src/lib/: ASTNode.cpp  Function.cpp  FunctionCallBack.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Scope.cpp  Toolkit.cpp  Variable.cpp
src/runtime/: Function.cpp  FunctionCallBack.cpp  Toolkit.cpp
test/: Jaba++.cpp
